syntax = "proto3";

package scan;

// DB -----------
import "options/gorm.proto";
import "types/types.proto";
import "google/protobuf/timestamp.proto";

import "scan/scan.proto";
import "host/host.proto";

// Run - Represents a Nmap scan before, after or while being run. 
// As long as we cannot import db.Host objects (circular imports), we will
// declare a similar NmapScan type in the Go code, and use it when needed.
message Run {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;

  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];
  // @gotags: display:"Created at" readonly:"true"
  google.protobuf.Timestamp CreatedAt = 4;
  // @gotags: display:"Updated at" readonly:"true"
  google.protobuf.Timestamp UpdatedAt = 5;
  // -------------------------------------

  string Args = 10;
  string ProfileName = 11;
  string Scanner = 12;
  string StartStr = 13;
  string Version = 14;
  string XMLOutputVersion = 15;
  Debugging Debugging = 16;
  scan.Stats Stats = 17;
  scan.Info ScanInfo = 18;
  google.protobuf.Timestamp Start = 19;
  Verbose Verbose = 20;
  repeated host.Host Hosts = 21 [(gorm.field).many_to_many = {}];          
  repeated scan.NmapScript PreScripts = 22 [(gorm.field).many_to_many = {}];
  repeated scan.NmapScript PostScripts = 23 [(gorm.field).many_to_many = {}];
  repeated scan.Target Targets = 24 [(gorm.field).many_to_many = {}];
  repeated scan.Task TaskBegin = 25;
  repeated scan.TaskProgress TaskProgress = 26;
  repeated scan.Task TaskEnd = 27;

  repeated string NmapErrors = 28;
  // bytes rawXML = 30;
}
