syntax = "proto3";

package scan;

// DB -----------
import "options/gorm.proto";
import "types/types.proto";
import "google/protobuf/timestamp.proto";

// This file contains all objects needed by Nmap for :
// - Giving information about an ongoing scan
// - Parsing its results


// Info - A general overview of a Scan, with basic information
// on targeted/found services, protocols and flags.
message Info {
        // @gotags: xml:"numservices,attr"
        int32 NumServices = 1;
        // @gotags: xml:"protocol,attr"
        string Protocol = 2;
        // @gotags: xml:"scanflags,attr"
        string ScanFlags = 3;
        // @gotags: xml:"services,attr"
        string Services = 4;
        // @gotags: xml:"type,attr"
        string Type = 5;
}

// Verbose - Contains the verbosity level of the scan
message Verbose {
        // @gotags: xml:"level,attr"
        int32 Level = 1;
}

// Debugging - Contains the debugging level of the scan
message Debugging {
        // @gotags: xml:"level,attr"
        int32 Level = 1;
}

// Task - Information about a task
message Task {
        // @gotags: xml:"time,attr"
        google.protobuf.Timestamp Time = 5;
        // @gotags: xml:"task,attr"
        string Task = 2;
        // @gotags: xml:"extrainfo,attr"
        string ExtraInfo = 3;
}

// TaskProgress - Progression of a task
message TaskProgress {
        // @gotags: xml:"percent,attr"
        float Percent = 1;
        // @gotags: xml:"remaining,attr"
        int32 Remaining = 2;
        // @gotags: xml:"task,attr"
        string Task = 3;
        // @gotags: xml:"etc,attr"
        google.protobuf.Timestamp Etc = 4;
        // @gotags: xml:"time,attr"
        google.protobuf.Timestamp Time = 5;
}

// Target - Represents a target, how it was specified when passed to nmap,
// its status and the reason of its status. Example:
// <target specification="domain.does.not.exist" status="skipped" reason="invalid"/>
message Target {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];

  // @gotags: xml:"specification,attr"
  string Specification = 10;
  // @gotags: xml:"status,attr"
  string Status = 11;
  // @gotags: xml:"reason,attr"
  string Reason = 12;
}

// Stats - Contains statistics for a Nmap scan
message Stats {
        // @gotags: xml:"finished"
        Finished Finished = 1;
        // @gotags: xml:"hosts"
        HostStats Hosts = 2;
}

message Finished {
        // @gotags: xml:"time,attr"
        google.protobuf.Timestamp Time = 1;
        // @gotags: xml:"timestr,attr"
        string TimeStr = 2;
        // @gotags: xml:"elapsed,attr"
        float Elapsed = 3;
        // @gotags: xml:"summary,attr"
        string Summary = 4;
        // @gotags: xml:"exit,attr"
        string Exit = 5;
        // @gotags: xml:"errormsg,attr"
        string ErrorMsg = 6;
}

// Host - Contains the amount of up/down hosts and total count
message HostStats {
        // @gotags: xml:"up,attr"
        int32 Up = 1;
        // @gotags: xml:"down,attr"
        int32 Down = 2;
        // @gotags: xml:"total,attr"
        int32 Total = 3;
}

// NmapScript - Represents a Nmap Scripting Engine Script.
// The inner elements can be an arbitrary collection of Tables and Elements. They can be empty
message NmapScript {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;

  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];
  // @gotags: display:"Created at" readonly:"true"
  google.protobuf.Timestamp CreatedAt = 4;
  // @gotags: display:"Updated at" readonly:"true"
  google.protobuf.Timestamp UpdatedAt = 5;
  // -------------------------------------

  // @gotags: xml:"output,attr"
  string Output = 10;
  // @gotags: xml:"elem,omitempty"
  repeated Element Elements = 11;
  // @gotags: xml:"table,omitempty"
  repeated Table Tables = 12;
}

// elements - The smallest building block for scripts/tables. Key is optional
message Element {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];

  // @gotags: xml:"key,attr,omitempty"
  string Key = 10;
  // @gotags: xml:",innerxml"
  string Value = 11;
}

// Table - An arbitrary collection of (sub-)Tables and Elements. Can be empty
message Table {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];

  // @gotags: xml:"key,attr,omitempty"
  string Key = 10;
  // @gotags: xml:"table,omitempty"
  repeated Table Tables = 11;
  // @gotags: xml:"elem,omitempty"
  repeated Element Elements = 12;
}

// Times - Contains time statistics for a Nmap scan
message Times {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];


  // @gotags: xml:"srtt,attr"
  string SRTT = 10;
  // @gotags: xml:"rttvar,attr"
  string RTT = 11;
  // @gotags: xml:"to,attr"
  string To = 12;
}

// Smurf - COntains responses from a smurf attack
message Smurf {
  // GORM --------------------------------
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true"
  gorm.types.UUID Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true}];

  // @gotags: xml:"responses,attr"
  string Responses = 10;
}
